			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04x: *********************************

BUG: (8/28/06, RK) PIE: Backtracking bug hides much ambiguity, type string should be one to one with type code

IMP: (8/25/06, SAF) PIE: InterchangePart access of P2P matrix from shared info, ports 
     partitioned by wire equivalence classes.

IMP: (8/25/06, RK) PIE: Store CompositeInfo in CompositePart

IMP: (8/25/06, GVG) Code to count number of transistors in Schematics (bug #1209)

IMP: (8/25/06, RK) PIE: First cut at equivalent pins

IMP: (8/25/06, RK) PIE: Deal with topologically identical islands

IMP: (8/25/06, SAF) PIE: All pseudo part info created with cannonical port ordering.

IMP/MAN: (8/25/06, JKG) Added menu command for down hier in place to object, bug#733

IMP: (8/24/06, SAF) PIE: Hash using sub-cell port to port matrix when creating port
     to port matrix. Pins and pseudo-parts classified by equivalence type. 

IMP/MAN: (8/24/06, GVG) Function to count number of transistors in Schematics.

IMP: (8/22/06, RK) PIE: Composite Part Information prints out

IMP: (8/22/06, SMR) Improvements to node extractor.

IMP/MAN: (8/24/06, SMR) Made waveform improvements: (1) Can now use the
     right-button to drag signals from one panel to another (this copies them,
     instead of moving them). (2) Can now drag a signal from one panel to
     horizontal axis of another (Bug #893).

BUG: (8/24/06, JKG) Bug #975 - Keypad keys do not work over VNC
FIX: VNC transmits different key codes than normal, so I have added those keycodes to the 
menu items bound to keypad keys.

IMP: (8/23/06, RK) PIE: Composite Information begun

IMP: (8/23/06, SAF) PIE: Subcircuit island extraction and port to port matrix generation.

************************* Version 8.04w: *********************************
